# qshow

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL_gfx.cmake
src/: filesystem.cpp  filesystem.h  main.cpp  qshow.cpp  qshow.h
